trying to fix safari focus not working (added js if app is ran on iphone)

--- a/static/css/accntsettings.css
+++ b/static/css/accntsettings.css
@@ -3,6 +3,11 @@ body {
     background-color: var(--white-medli);
 }
 
+/* hide footer graphic container */
+div.container-graphic {
+    display: none;
+}
+
 /* main container */
 main.container {
     display: flex;
@@ -21,6 +26,7 @@ main.container {
     }
         /* h1 text */
         main.container > a > h1 {
+            margin-top: 1em;
             font-size: 1.7rem;
             text-align: center;
         }
@@ -42,7 +48,7 @@ main.container > div.header {
         width: 150px;
         margin: 1em 0 1em 0;
         border-radius: 50%;
-        border: 1px solid var(--white-med);
+        border: 2px solid var(--grey-dark);
     }
     /* h1 text */
     main.container > div.header > h1 {
@@ -135,6 +141,7 @@ main.container > button.section > div.section-dropdown {
         }
         /* form text */
         div.section-dropdown > form input[type="text"], input[type="password"]{
+            width: 80%;
             padding: 0.8em;
             font-size: 1rem;
             border-radius: 8px;
