--- a/static/css/listview.css
+++ b/static/css/listview.css
@@ -3,6 +3,11 @@ body {
     background-color: var(--white-medli);
 }
 
+/* hide footer graphic container */
+div.container-graphic {
+    display: none;
+}
+
 /* header container */
 div.container-header {
     display: flex;
